--- a/community.html
+++ b/community.html
@@ -43,7 +43,7 @@
     <div><img src="images/Website 9.jpg"> <h4>Seth Manilove addressing the University of Miami on Holocaust Remembrance Day.</h4></div>
     <div><img src="images/Website 4.jpg"><h4> Seth speaking at the University of Miami Hillel 75th Anniversary Celebration and community-wide fundraising event.</h4></div>
     <div><img src="images/PresidentFrenk.jpg"> <h4> Seth addressing the University of Miami Student Government and  the President of the University, Dr. Julio Frenk. </h4> </div>
-    <div><img src="images/Media 1.png"> <h4> After anti-semitic acts took place at the University of Miami campus, Manilove along with Student Government President, Evan de la Joya made a statement to the entire University community. </h4> </div>
+    <div><img src="images/Media 1.png"> <h4> After anti-semitic acts took place at the University of Miami campus, Manilove along with Student Government President, Evan de Joya made a statement to the entire University community. </h4> </div>
     </div>
   </div>
   <div class="container">
