--- a/israel.html
+++ b/israel.html
@@ -41,7 +41,7 @@
   <div class="slider">
     <div><img src="images/Website 2.jpg"><h4> Seth working at Taliaz Health in Tel Aviv, Israel.</h4></div>
     <div><img src="images/Website 8.jpg"> <h4> Seth speaking at the International Convention Center in Jerusalem, Israel in front of the 1500 Onward Israel participants, employers, and staff. </h4></div>
-    <div><img src="images/borabora3.jpeg"> Surfing at the Bora Bora Island Club </div>
+    <div><img src="images/Israel.jpg"> Surfing at the Bora Bora Island Club </div>
     <div><img src="images/borabora4.jpg">  Bora Bora Helicopter View  </div>
     <div><img src="images/borabora5.jpeg"> The Otemanu island off the coast of Bora Bora </div>
     </div>
