--- a/research.html
+++ b/research.html
@@ -41,10 +41,8 @@
 
   <div class="slider">
     <div><img src="images/Pre-Health Mentor.jpg"> <h4> Seth with Igor Khoklov and Pre-health mentor, Dr. Allen Levitt.</h4>  </div>
-    <div><img src="images/research1.jpg"> <h4> Howard Hughes Medical Institute Research Laboratory</h4> </div>
+    <div><img src="images/research1.png"> <h4> Howard Hughes Medical Institute Research Laboratory</h4> </div>
     <div><img src="images/Science Fair.jpg"><h4>  Seth with his First Place Project prior to departing to the State Science Fair of Florida. </h4> </div>
-    <div><img src="images/borabora4.jpg"> <h4>  Bora Bora Helicopter View  </h4> </div>
-    <div><img src="images/borabora5.jpeg"> <h4> The Otemanu island off the coast of Bora Bora </h4> </div>
     </div>
   </div>
   <div class="container">
