--- a/community.html
+++ b/community.html
@@ -18,12 +18,12 @@
 <a href="https://www.facebook.com/sethsam414" class="fa fa-facebook"></a>
 <a href="https://www.instagram.com/sethsam414/?hl=en" class="fa fa-instagram"></a>
 <a href="https://www.linkedin.com/in/seth-manilove-a5b123b7/" class="fa fa-linkedin"></a>
-
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 ...
 </div>
   <title>About</title>
   <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1>
-<p> Seth served as the President of the University of Miami Hillel in which he volunteered countless hours to better the Jewish community at the University of Miami. He represented the University of Miami's Two-thousand students to The Greater Miami Jewish Federation, The University of Miami Hillel Board of Directors, the Student Government, and to the University's administration.
+<p> Seth served as the President of the University of Miami Hillel in which he volunteered countless hours to better the Jewish community at the University of Miami. He represented the University of Miami's Two-thousand Jewish students to The Greater Miami Jewish Federation, The University of Miami Hillel Board of Directors, the Student Government, and to the University's administration. <br> <br> Seth has been the keynote speaker at numerous events for organizations such as The Birthright Israel Foundation, The Greater Miami Jewish Federation, and The South Dade Jewish Federation. 
 </p>  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
