--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
 <a href="https://www.facebook.com/sethsam414" class="fa fa-facebook"></a>
 <a href="https://www.instagram.com/sethsam414/?hl=en" class="fa fa-instagram"></a>
 <a href="https://www.linkedin.com/in/seth-manilove-a5b123b7/" class="fa fa-linkedin"></a>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 ...
 </div>
   <title>About</title>
   <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1><br>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-<div class="w3-container w3-center w3-animate-zoom">
-  <h2> Scientist,  Philanthropist, Activist,  </h2></div>
-  <p> Seth Manilove is a recent graduate of the University of Miami. Seth used college to pursue his wide variety of interests as he earned a Bachelor of Science (B.S.) in Biology as well as a Bachelor of Arts (B.A.) in Economics. Seth believes that in order to be a well-rounded individual one must pursue more than just one interest. Seth is passionate about giving back to the Jewish community, the advancement of science research, and hopefully practicing sports medicine. </p>
+<div class="w3-container w3-center w3-animate-zoom"> <h2> Scientist, Speaker, Philanthropist  </h2></div>
+  <p> Seth Manilove is a recent graduate of the University of Miami. Seth used college to pursue his wide variety of interests as he earned a Bachelor of Science (B.S.) in Biology as well as a Bachelor of Arts (B.A.) in Economics. Seth believes that in order to be a well-rounded individual one must pursue more than just one interest. <br><br> Seth is passionate about giving back to the Jewish community, the advancement of science research, and hopefully practicing sports medicine. </p>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -43,7 +41,7 @@
 
   <div class="slider">
     <div><img src="images/Jewish Community 1.JPG"> <h4>Seth Manilove was a Panelist at the Greater Miami Jewish Federation's Women's Philanthropy Event: How to Keep Judaism Alive - Carrying on Jewish Tradition</h3> </div>
-    <div><img src="images/Website cover.png"> Intercontinental Thalasso Beach, Bora Bora</div>
+    <div><img src="images/Website 1.png"> Intercontinental Thalasso Beach, Bora Bora</div>
     <div><img src="images/borabora3.jpeg"> Surfing at the Bora Bora Island Club </div>
     <div><img src="images/borabora4.jpg">  Bora Bora Helicopter View  </div>
     <div><img src="images/borabora5.jpeg"> The Otemanu island off the coast of Bora Bora </div>
