--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
 <a href="https://www.facebook.com/sethsam414" class="fa fa-facebook"></a>
 <a href="https://www.instagram.com/sethsam414/?hl=en" class="fa fa-instagram"></a>
 <a href="https://www.linkedin.com/in/seth-manilove-a5b123b7/" class="fa fa-linkedin"></a>
-
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 ...
 </div>
   <title>About</title>
@@ -40,10 +40,10 @@
 <body>
 
   <div class="slider">
-    <div><img src="images/Media 5.png"> Intercontinental Thalasso Beach, Bora Bora</div>
-    <div><img src="images/Media 2.png"> Horseshoe Crab on the famous Beach of Bora Bora</div>
-    <div><img src="images/Media 3.png"> Surfing at the Bora Bora Island Club </div>
-    <div><img src="images/Media 4.png">  Bora Bora Helicopter View  </div>
+    <div><img src="images/Media 5.png"> </div>
+    <div><img src="images/Media 2.png"> </div>
+    <div><img src="images/Media 3.png"> </div>
+    <div><img src="images/Media 4.png"> </div>
     </div>
   </div>
   <div class="container">
