--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@
 <a href="https://www.facebook.com/sethsam414" class="fa fa-facebook"></a>
 <a href="https://www.instagram.com/sethsam414/?hl=en" class="fa fa-instagram"></a>
 <a href="https://www.linkedin.com/in/seth-manilove-a5b123b7/" class="fa fa-linkedin"></a>
-
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 ...
 </div>
   <title>About</title>
