--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
   <div class="slider">
-    <div><img src="images/Jewish Community 1.JPG"> <h4>Seth Manilove was a Panelist at the Greater Miami Jewish Federation's Women's Philanthropy Event: How to Keep Judaism Alive - Carrying on Jewish Tradition</h3> </div>
+    <div><img src="images/womens.jpeg"> <h4>Seth Manilove was a Panelist at the Greater Miami Jewish Federation's Women's Philanthropy Event: How to Keep Judaism Alive - Carrying on Jewish Tradition</h3> </div>
     <div><img src="images/Website 1.png"> Intercontinental Thalasso Beach, Bora Bora</div>
     <div><img src="images/borabora3.jpeg"> Surfing at the Bora Bora Island Club </div>
     <div><img src="images/borabora4.jpg">  Bora Bora Helicopter View  </div>
