--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="slider">
     <div><img src="images/womens.png"> <h4>Seth Manilove was a Panelist at the Greater Miami Jewish Federation's Women's Philanthropy Event: How to Keep Judaism Alive - Carrying on Jewish Tradition</h4> </div>
     <div><img src="images/Website 1.png"> Intercontinental Thalasso Beach, Bora Bora</div>
-    <div><img src="images/borabora3.jpeg"> Surfing at the Bora Bora Island Club </div>
+    <div><img src="images/Website 3.jpg"> Surfing at the Bora Bora Island Club </div>
     <div><img src="images/borabora4.jpg">  Bora Bora Helicopter View  </div>
     <div><img src="images/borabora5.jpeg"> The Otemanu island off the coast of Bora Bora </div>
     </div>
