--- a/community.html
+++ b/community.html
@@ -46,6 +46,8 @@
     <div><img src="images/Media 1.png"> <h4> After anti-semitic acts took place at the University of Miami campus, Manilove along with Student Government President, Evan de Joya made a statement to the entire University community. </h4> </div>
     </div>
   </div>
+
+To Contact Seth:
   <div class="container">
     <form action="action_page.php">
 
@@ -60,6 +62,7 @@
         <option value="australia">Australia</option>
         <option value="canada">Canada</option>
         <option value="usa">USA</option>
+        <option value="israel">Israel</option>
       </select>
 
       <label for="subject">Subject</label>
