--- a/index.html
+++ b/index.html
@@ -42,35 +42,37 @@
   <div class="slider">
     <div><img src="images/womens.png"> <h4>Seth Manilove was a Panelist at the Greater Miami Jewish Federation's Women's Philanthropy Event: How to Keep Judaism Alive - Carrying on Jewish Tradition</h4> </div>
     <div><img src="images/Website 1.png"> Intercontinental Thalasso Beach, Bora Bora</div>
-    <div><img src="images/Website 3.jpg"> Surfing at the Bora Bora Island Club </div>
+    <div><img src="images/Website 3.jpg">  </div>
     <div><img src="images/borabora4.jpg">  Bora Bora Helicopter View  </div>
     <div><img src="images/borabora5.jpeg"> The Otemanu island off the coast of Bora Bora </div>
     </div>
   </div>
-  <div class="container">
-    <form action="action_page.php">
+  <h4>To Contact Seth:</h4>
+    <div class="container">
+      <form action="action_page.php">
 
-      <label for="fname">First Name</label>
-      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-      <label for="lname">Last Name</label>
-      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-      <label for="country">Country</label>
-      <select id="country" name="country">
-        <option value="australia">Australia</option>
-        <option value="canada">Canada</option>
-        <option value="usa">USA</option>
-      </select>
+        <label for="country">Country</label>
+        <select id="country" name="country">
+          <option value="australia">Australia</option>
+          <option value="canada">Canada</option>
+          <option value="usa">USA</option>
+          <option value="israel">Israel</option>
+        </select>
 
-      <label for="subject">Subject</label>
-      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+        <label for="subject">Subject</label>
+        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-      <input type="submit" value="Submit">
+        <input type="submit" value="Submit">
 
-    </form>
-  </div>
+      </form>
+    </div>
 
-</body>
-<footer>Copyright Seth Manilove 2018</footer>
-</html>
+  </body>
+  <footer>Copyright Seth Manilove 2018</footer>
+  </html>
