--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <title>About</title>
   <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1><br>
 <div class="w3-container w3-center w3-animate-zoom"> <h2> Scientist, Speaker, Philanthropist  </h2></div>
-  <p> Seth Manilove is a recent graduate of the University of Miami. Seth used college to pursue his wide variety of interests as he earned a Bachelor of Science (B.S.) in Biology as well as a Bachelor of Arts (B.A.) in Economics. Seth believes that in order to be a well-rounded individual one must pursue more than just one interest. <br><br> Seth is passionate about giving back to the Jewish community, the advancement of science research, and hopefully practicing sports medicine. </p>
+  <p> Seth Manilove is a recent graduate of the University of Miami. Seth used college to pursue his wide variety of interests as he earned a Bachelor of Science (B.S.) in Biology as well as a Bachelor of Arts (B.A.) in Economics. Seth believes that in order to be a well-rounded individual one must pursue more than just one interest. <br><br> Seth is passionate about giving back to the Jewish community, the advancement of science research, and one day practicing sports medicine. </p>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -63,6 +63,7 @@
           <option value="canada">Canada</option>
           <option value="usa">USA</option>
           <option value="israel">Israel</option>
+          <option value="UK">UK</option>
         </select>
 
         <label for="subject">Subject</label>
