--- a/community.html
+++ b/community.html
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-To Contact Seth:
+<h4>To Contact Seth:</h4>
   <div class="container">
     <form action="action_page.php">
 
