--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
 
   <div class="slider">
     <div><img src="images/womens.png"> <h4>Seth Manilove was a Panelist at the Greater Miami Jewish Federation's Women's Philanthropy Event: How to Keep Judaism Alive - Carrying on Jewish Tradition</h4> </div>
-    <div><img src="images/Website 1.png"> Intercontinental Thalasso Beach, Bora Bora</div>
-    <div><img src="images/Website 3.jpg">  </div>
-    <div><img src="images/borabora4.jpg">  Bora Bora Helicopter View  </div>
-    <div><img src="images/borabora5.jpeg"> The Otemanu island off the coast of Bora Bora </div>
+    <div><img src="images/Website 7.jpg"> <h4>Seth Manilove talking to prospective students at the University of Miami Hillel on Admitted Students Day 2017. </h4> </div>
+    <div><img src="images/Website 4.jpg"><h4> Seth speaking at the University of Miami Hillel 75th Anniversary Celebration and community-wide fundraising event.</h4></div>
+  
     </div>
   </div>
   <h4>To Contact Seth:</h4>
@@ -69,7 +68,7 @@
         <label for="subject">Subject</label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-        <input type="submit" value="Submit">
+        <input type="submit" action= "mailto:sethsam41496@aim.com" value="Submit">
 
       </form>
     </div>
