--- a/israel.html
+++ b/israel.html
@@ -41,10 +41,7 @@
   <div class="slider">
     <div><img src="images/Website 2.jpg"><h4> Seth working at Taliaz Health in Tel Aviv, Israel.</h4></div>
     <div><img src="images/Website 8.jpg"> <h4> Seth speaking at the International Convention Center in Jerusalem, Israel in front of the 1500 Onward Israel participants, employers, and staff. </h4></div>
-    <div><img src="images/Israel.jpg"> Surfing at the Bora Bora Island Club </div>
-    <div><img src="images/borabora4.jpg">  Bora Bora Helicopter View  </div>
-    <div><img src="images/borabora5.jpeg"> The Otemanu island off the coast of Bora Bora </div>
-    </div>
+
   </div>
   <h4>To Contact Seth:</h4>
     <div class="container">
@@ -67,7 +64,7 @@
         <label for="subject">Subject</label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-        <input type="submit" value="Submit">
+        <input type="submit" action= "mailto:sethsam41496@aim.com" value="Submit">
 
       </form>
     </div>
