--- a/news.html
+++ b/news.html
@@ -67,7 +67,7 @@
         <label for="subject">Subject</label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-        <input type="submit" value="Submit">
+        <input type="submit" action= "mailto:sethsam41496@aim.com" value="Submit">
 
       </form>
     </div>
