--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <head>
 
   <link rel="stylesheet" href="master.css">
-
-
+ <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1>
   <div class="topnav">
   <a class="active" href="index.html">About</a>
   <a href="research.html">Research</a>
@@ -21,8 +20,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 ...
 </div>
-  <title>About</title>
-  <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1><br>
+  <title>Home</title> <br>
 <div class="w3-container w3-center w3-animate-zoom"> <h2> Scientist, Speaker, Philanthropist  </h2></div>
   <p> Seth Manilove is a recent graduate of the University of Miami. Seth used college to pursue his wide variety of interests as he earned a Bachelor of Science (B.S.) in Biology as well as a Bachelor of Arts (B.A.) in Economics. Seth believes that in order to be a well-rounded individual one must pursue more than just one interest. <br><br> Seth is passionate about giving back to the Jewish community, the advancement of science research, and one day practicing sports medicine. </p>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
@@ -43,7 +41,7 @@
     <div><img src="images/womens.png"> <h4>Seth Manilove was a Panelist at the Greater Miami Jewish Federation's Women's Philanthropy Event: How to Keep Judaism Alive - Carrying on Jewish Tradition</h4> </div>
     <div><img src="images/Website 7.jpg"> <h4>Seth Manilove talking to prospective students at the University of Miami Hillel on Admitted Students Day 2017. </h4> </div>
     <div><img src="images/Website 4.jpg"><h4> Seth speaking at the University of Miami Hillel 75th Anniversary Celebration and community-wide fundraising event.</h4></div>
-  
+
     </div>
   </div>
   <h4>To Contact Seth:</h4>
