--- a/israel.html
+++ b/israel.html
@@ -2,6 +2,7 @@
 <head>
 
   <link rel="stylesheet" href="master.css">
+  <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1>
 
 
   <div class="topnav">
@@ -21,8 +22,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 ...
 </div>
-  <title>About</title>
-  <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1>
+  <title>Israel</title> <br>
   <p> Seth Manilove spent the Summer of 2017 abroad in Israel. He participated in a 16 day Leadership Training program, in which he received practical training in public speaking, social media content creation and management, and other effective ways to defeat anti-Israel campaigns. <br> <br> He then participated in Ownard Israel which allows fifteen hundred American college students to intern for cutting edge Israeli companies. Seth worked for Taliaz Health in Tel Aviv, Israel, a Biotech company specializing in Pharmacogenomics and Personalized Medicine. He assisted their Biological Research team. Seth spoke at the International Convention Center in Jerusalem about his experience of stepping out of his comfort zone and working in Israel. </p>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
