--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <head>
 
   <link rel="stylesheet" href="master.css">
-
+  <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1>
 
   <div class="topnav">
   <a class="active" href="index.html">About</a>
@@ -21,8 +21,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 ...
 </div>
-  <title>About</title>
-  <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1>
+  <title>Research</title> <br>
   <p> Seth Manilove has contributed to the scientific world in a variety of ways. During his first two semesters at the University of Miami (Fall 2014, Spring 2015), Seth participated in the Howard Hughes Medical Institute Biology Laboratory. This is an opportunity reserved for a select group of Undergradutes who have demonstrated a high aptitude for research. Student teams engage in two inquiry -based laboratory research projects, each lasting six weeks, per semester.<br> <br> Aside from his work at the University of Miami, in 2014 he performed research at the University of Florida. His project titled: The Site Directed Mutagenesis of Mutations E35D and H69K of Hiv-1 Protease won First Place at the Broward County Science Fair. This granted him a trip to the 2014 State Science Fair of Florida, where his project won fourth place.
      </p>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
