--- a/community.html
+++ b/community.html
@@ -2,6 +2,7 @@
 <head>
 
   <link rel="stylesheet" href="master.css">
+  <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1>
 
 
   <div class="topnav">
@@ -13,7 +14,6 @@
 
   <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 <!-- Add font awesome icons -->
 <a href="https://www.facebook.com/sethsam414" class="fa fa-facebook"></a>
 <a href="https://www.instagram.com/sethsam414/?hl=en" class="fa fa-instagram"></a>
@@ -21,9 +21,9 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 ...
 </div>
-  <title>About</title>
-  <h1> Seth Manilove: The Not-So-Typical Pre-Medical Student</h1>
-<p> Seth served two terms as the President of the University of Miami Hillel in which he volunteered countless hours to better the Jewish community at the University of Miami. He represented the University of Miami's Two-thousand Jewish students to The Greater Miami Jewish Federation, The University of Miami Hillel Board of Directors, the Student Government, and to the University's administration. <br> <br> Seth has been the keynote speaker at numerous events for organizations such as The Birthright Israel Foundation, The Greater Miami Jewish Federation, and The South Dade Jewish Federation.
+  <title>About</title> <br>
+
+<p> Seth served two terms as the President of the University of Miami Hillel and spent countless hours to better the Jewish community at the University of Miami. He represented the University of Miami's Two-thousand Jewish students to The Greater Miami Jewish Federation, The University of Miami Hillel Board of Directors, the Student Government, and to the University's administration. <br> <br> Seth has been the keynote speaker at numerous events for organizations such as The Birthright Israel Foundation, The Greater Miami Jewish Federation, and The South Dade Jewish Federation.
 </p>  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -41,7 +41,7 @@
   <div class="slider">
     <div><img src="images/womens.png"> <h4>Seth Manilove was a Panelist at the Greater Miami Jewish Federation's Women's Philanthropy Event: How to Keep Judaism Alive - Carrying on Jewish Tradition</h4> </div>
     <div><img src="images/Website 9.jpg"> <h4>Seth Manilove addressing the University of Miami on Holocaust Remembrance Day.</h4></div>
-    <div><img src="images/Website 4.jpg"><h4> Seth speaking at the University of Miami Hillel 75th Anniversary Celebration and community-wide fundraising event.</h4></div>
+
     <div><img src="images/PresidentFrenk.jpg"> <h4> Seth addressing the University of Miami Student Government and  the President of the University, Dr. Julio Frenk. </h4> </div>
     <div><img src="images/Media 1.png"> <h4> After anti-semitic acts took place at the University of Miami campus, Manilove along with Student Government President, Evan de Joya made a statement to the entire University community. </h4> </div>
     </div>
