--- a/community.html
+++ b/community.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 ...
 </div>
-  <title>About</title> <br>
+  <title>Community</title> <br>
 
 <p> Seth served two terms as the President of the University of Miami Hillel and spent countless hours to better the Jewish community at the University of Miami. He represented the University of Miami's Two-thousand Jewish students to The Greater Miami Jewish Federation, The University of Miami Hillel Board of Directors, the Student Government, and to the University's administration. <br> <br> Seth has been the keynote speaker at numerous events for organizations such as The Birthright Israel Foundation, The Greater Miami Jewish Federation, and The South Dade Jewish Federation.
 </p>  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
